Revert "Sj 91 페이지 화면 구현 (#9)"
This reverts commit 71537f8fd85d0d912075d35f7ef9abe0f1d91c8d.

--- a/src/main/resources/templates/user/changePassword.html
+++ b/src/main/resources/templates/user/changePassword.html
@@ -1,80 +1,33 @@
-<html layout:decorate="~{layout/layout2}">
+<html layout:decorate="~{layout/layout}">
 <div layout:fragment="content" class="container my-3">
-  <div class="window" style="width: 100%;margin-top: 10%">
-    <div class="title-bar">
-      <div class="title-bar-text " style="font-size: 30px">
-        비밀번호 변경
-      </div>
-      <div class="title-bar-controls" style="margin-right: 10px">
-        <button style="margin-right: 20px">
-          <img src="/images/questionmark.svg" style="height: 40px; width: 40px; padding:10px">
-        </button>
-        <button>
-          <img src="/images/x.svg" style="height: 40px; width: 40px; padding:10px">
-        </button>
-      </div>
+  <form th:action="@{/user/change/password}" th:object="${changePasswordDto}" method="post"
+        class="needs-validation" novalidate>
+    <div class="mb-3">
+      <label for="currentPassword" class="form-label">기존 비밀번호</label>
+      <input type="password" id="currentPassword" th:field="*{currentPassword}" class="form-control"
+             placeholder="기존 비밀번호를 입력하세요." required>
+      <span th:if="${#fields.hasErrors('currentPassword')}" th:errors="*{currentPassword}"
+            class="text-danger"></span>
     </div>
-    <div class="window-body" style="text-align: center">
-      <form th:action="@{/user/change/password}" th:object="${changePasswordDto}" method="post"
-            class="needs-validation" novalidate>
-        <div class="row" style="margin-bottom: 40px; margin-top: 40px;">
-          <label for="currentPassword" class="form-label col-xl-2 col-md-3 col-sm-3"
-                 style="font-size: 1.4rem; text-align: right; padding-top: 0.6rem; width: 205px; display: inline-block">기존
-            비밀번호</label>
-          <input type="password" id="currentPassword" th:field="*{currentPassword}"
-                 class="form-control-lg col-xl-9 col-md-7 col-sm-5"
-                 placeholder="기존 비밀번호를 입력하세요." required>
-          <span th:if="${#fields.hasErrors('currentPassword')}" th:errors="*{currentPassword}"
-                class="text-danger" style="font-size: 1rem;"></span>
-        </div>
 
-        <div class="row" style="margin-bottom: 40px">
-          <label for="newPassword1" class="form-label col-xl-2 col-md-3 col-sm-3"
-                 style="font-size: 1.5rem; text-align: right; padding-top: 0.6rem; width: 205px; display: inline-block">새
-            비밀번호</label>
-          <input type="password" id="newPassword1" th:field="*{newPassword1}"
-                 class="form-control-lg col-xl-9 col-md-7 col-sm-5"
-                 placeholder="새로운 비밀번호를 입력하세요." required>
-          <span th:if="${#fields.hasErrors('newPassword1')}" th:errors="*{newPassword1}"
-                class="text-danger" style="font-size: 1rem;"></span>
-        </div>
-
-        <div class="row" style="margin-bottom: 40px">
-          <label for="newPassword2" class="form-label col-xl-2 col-md-3 col-sm-3"
-                 style="font-size: 1.5rem; text-align: right; padding-top: 0.6rem; width: 205px; display: inline-block">새
-            비밀번호 확인</label>
-          <input type="password" id="newPassword2" th:field="*{newPassword2}"
-                 class="form-control-lg col-xl-9 col-md-7 col-sm-5"
-                 placeholder="새로운 비밀번호를 다시 입력하세요." required>
-          <span th:if="${#fields.hasErrors('newPassword2')}" th:errors="*{newPassword2}"
-                class="text-danger" style="font-size: 1rem;"></span>
-        </div>
-        <div class="row" style="text-align: center;">
-          <div class="col m-2">
-            <button type="button" class="btn-lg" onclick="location.href='/user'"
-                    style="height: 40px; width: 130px; margin-right: 10px;">< Back
-            </button>
-            <button type="submit" class="btn-lg" style="height: 40px; width: 130px">변경하기</button>
-          </div>
-        </div>
-      </form>
+    <div class="mb-3">
+      <label for="newPassword1" class="form-label">새로운 비밀번호</label>
+      <input type="password" id="newPassword1" th:field="*{newPassword1}" class="form-control"
+             placeholder="새로운 비밀번호를 입력하세요." required>
+      <span th:if="${#fields.hasErrors('newPassword1')}" th:errors="*{newPassword1}"
+            class="text-danger"></span>
     </div>
-  </div>
+
+    <div class="mb-3">
+      <label for="newPassword2" class="form-label">새로운 비밀번호 확인</label>
+      <input type="password" id="newPassword2" th:field="*{newPassword2}" class="form-control"
+             placeholder="새로운 비밀번호를 다시 입력하세요." required>
+      <span th:if="${#fields.hasErrors('newPassword2')}" th:errors="*{newPassword2}"
+            class="text-danger"></span>
+    </div>
+    <div class="mb-3">
+      <button type="submit" class="btn btn-primary">변경하기</button>
+    </div>
+  </form>
 </div>
-<style>
-  /* PC (해상도 1024px)*/
-  @media all and (min-width: 1024px) {
-    ...
-  }
-
-  /* 테블릿 가로, 테블릿 세로 (해상도 768px ~ 1023px)*/
-  @media all and (min-width: 768px) and (max-width: 1023px) {
-    ...
-  }
-
-  /* 모바일 가로, 모바일 세로 (해상도 480px ~ 767px)*/
-  @media all and (max-width: 767px) {
-    ...
-  }
-</style>
 </html>
