refactor: 요청 url 수정
- api 프리픽스 추가

--- a/src/main/resources/templates/user/changePassword.html
+++ b/src/main/resources/templates/user/changePassword.html
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="window-body" style="text-align: center">
-      <form th:action="@{/user/change/password}" th:object="${changePasswordDto}" method="post"
+      <form th:action="@{/api/user/change/password}" th:object="${changePasswordDto}" method="post"
             class="needs-validation" novalidate>
         <div class="row" style="margin-bottom: 40px; margin-top: 40px;">
           <label for="currentPassword" class="form-label col-xl-2 col-md-3 col-sm-3"
