fix: Nginx 타임리프 렌더링 문제 해결

--- a/src/main/resources/templates/excel/excelList.html
+++ b/src/main/resources/templates/excel/excelList.html
@@ -36,7 +36,7 @@
           </tbody>
         </table>
       </div>
-      <form th:action="@{/api/excel/read}" method="POST" enctype="multipart/form-data"
+      <form th:action="@{/excel/read}" method="POST" enctype="multipart/form-data"
             onsubmit="return checkFileSize()"
             class="needs-validation" novalidate style="font-size:15px">
         <!-- 파일 크기 초과 시 에러 메시지 표시 -->
