--- a/src/main/resources/templates/gonghak/statusInputForm.html
+++ b/src/main/resources/templates/gonghak/statusInputForm.html
@@ -32,7 +32,7 @@
     <hr class="my-4">
     <div class="col">
       <button class="w-100 btn btn-primary btn-lg" onclick="location.href='gonghak/statusForm.html'"
-              th:onclick="|location.href='@{/api/gonghak/status}'|" type="submit">입력</button>
+              th:onclick="|location.href='@{/gonghak/status}'|" type="submit">입력</button>
     </div>
   </form>
 </div>
