--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -14,7 +14,7 @@
     <p style="font-family: IBM Plex Mono; color:white; font-weight: 400; font-size: 30px">Press start to continue _</p>
   </div>
   <div style="margin-bottom: 50px">
-    <button class ="btn-lg" style="font-family: IBM Plex Mono; font-weight: 400; font-size: 30px; height: 60px; width: 180px" onclick="location.href='/api/user/login'">Start</button>
+    <button class ="btn-lg" style="font-family: IBM Plex Mono; font-weight: 400; font-size: 30px; height: 60px; width: 180px" onclick="location.href='/user/login'">Start</button>
   </div>
 </div>
 </html>
