--- a/src/main/resources/templates/user/information.html
+++ b/src/main/resources/templates/user/information.html
@@ -41,10 +41,10 @@
       </div>
       <div class="row" style="text-align: center; margin-top: 50px">
         <div class="col m-2">
-          <button type="button" class="btn-lg" onclick="location.href='/api/user/change/password'"
+          <button type="button" class="btn-lg" onclick="location.href='/user/change/password'"
                   style="height: 60px; width: 190px; margin-right: 10px;">비밀번호 변경
           </button>
-          <button type="button" class="btn-lg" onclick="location.href='/api/user/withdrawal'"
+          <button type="button" class="btn-lg" onclick="location.href='/user/withdrawal'"
                   style="height: 60px; width: 190px">회원 탈퇴
           </button>
         </div>
