--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -19,7 +19,7 @@
              style="max-width: 100%; height: auto; max-height: 100%; padding: 10px">
       </div>
       <div class="col-lg-8 col-md-12 col-sm-12">
-        <form th:action="@{/api/user/signup}" th:object="${userJoinDto}" method="post"
+        <form th:action="@{/user/signup}" th:object="${userJoinDto}" method="post"
               class="needs-validation" novalidate>
           <div class="row" style="margin-bottom: 20px; margin-top: 30px; text-align: center">
             <label for="studentId" class="form-label col-xl-3 col-lg-3 col-md-2 col-sm-2"
