--- a/src/main/resources/templates/layout/layout2.html
+++ b/src/main/resources/templates/layout/layout2.html
@@ -24,19 +24,19 @@
 <div class="row justify-content-center" style="max-width: 100dvw;font-family: IBM Plex Mono">
   <div class="col-3 text-center" style="font-weight: bold;">
     <div style="margin-top: 100px; margin-bottom: 70px">
-      <a href="/api/gonghak/status">
+      <a href="/gonghak/status">
         <img src="/static/images/information.png" style="width: 70px; height: 70px; margin-bottom: 10px">
       </a>
       <p style="color: white">인증정보 확인</p>
     </div>
     <div style="margin-bottom: 70px">
-      <a href="/api/excel">
+      <a href="/excel">
         <img src="/static/images/completed.png" style="width: 70px; height: 70px; margin-bottom: 10px">
       </a>
       <p style="color: white">기이수 과목</p>
     </div>
     <div>
-      <a href="/api/user">
+      <a href="/user">
         <img src="/static/images/password.png" style="width: 70px; height: 70px; margin-bottom: 10px">
       </a>
       <p style="color: white">내 정보</p>
