--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -28,7 +28,7 @@
                    class="form-control-lg col-xl-8 col-lg-8 col-md-8 col-sm-7"
                    required>
             <span th:if="${#fields.hasErrors('studentId')}" th:errors="*{studentId}"
-                  class="text-danger" style="font-size: 1rem; margin-left: 13rem"></span>
+                  class="text-danger" style="font-size: 1rem; margin-left: 13rem; text-align: left"></span>
           </div>
 
           <div class="row" style="margin-bottom: 20px">
