--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -74,7 +74,7 @@
 
           <div class="row" style="margin-bottom: 20px; align-items: center;">
             <label for="email" class="form-label col-xl-3 col-lg-3 col-md-2 col-sm-2"
-                   style="font-size: 1.5rem; text-align: right; padding-top: 0.4rem; width: 190px; display: inline-block">이메일</label>
+                   style="font-size: 1.5rem; text-align: right; padding-top: 0.4rem; width: 190px; display: inline-block">학교 이메일</label>
             <input type="text" id="email" th:field="*{email}"
                    class="form-control-lg col-xl-6 col-lg-5 col-md-5 col-sm-4"
                    required>
