--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -28,7 +28,7 @@
                    class="form-control-lg col-xl-8 col-lg-8 col-md-8 col-sm-7"
                    required>
             <span th:if="${#fields.hasErrors('studentId')}" th:errors="*{studentId}"
-                  class="text-danger" style="font-size: 1rem; margin-left: 13rem"></span>
+                  class="text-danger" style="font-size: 1rem; margin-left: 13rem; text-align: left"></span>
           </div>
 
           <div class="row" style="margin-bottom: 20px">
@@ -74,7 +74,7 @@
 
           <div class="row" style="margin-bottom: 20px; align-items: center;">
             <label for="email" class="form-label col-xl-3 col-lg-3 col-md-2 col-sm-2"
-                   style="font-size: 1.5rem; text-align: right; padding-top: 0.4rem; width: 190px; display: inline-block">이메일</label>
+                   style="font-size: 1.5rem; text-align: right; padding-top: 0.4rem; width: 190px; display: inline-block">학교 이메일</label>
             <input type="text" id="email" th:field="*{email}"
                    class="form-control-lg col-xl-6 col-lg-5 col-md-5 col-sm-4"
                    required>
