--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -1,7 +1,7 @@
 <nav th:fragment="navbarFragment"
      class="navbar navbar-expand navbar-light bg-light border-bottom">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">김미공학인증</a>
+    <a class="navbar-brand" href="/" style="font-family: IBM Plex Mono; font-weight: 500">Gonghak98</a>
     <div>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
