--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -58,6 +58,8 @@
               <option value="">-- 선택하세요 --</option>
               <option value="컴퓨터공학과">컴퓨터공학과</option>
               <option value="전자정보통신공학과">전자정보통신공학과</option>
+              <option value="소프트웨어학과">소프트웨어학과</option>
+              <option value="데이터사이언스학과">데이터사이언스학과</option>
             </select>
             <span th:if="${#fields.hasErrors('major')}" th:errors="*{major}" class="text-danger"
                   style="font-size: 1rem; margin-left: 13rem"></span>
