--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -5,8 +5,14 @@
     <div>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
+          <a class="nav-link"
+             href="https://docs.google.com/forms/d/e/1FAIpQLSfM38sJnft8zp778OIHx2dkURLLs3pAqbti7vXfzZRrO-HGpQ/viewform">
+            피드백하기
+          </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/user/login}">로그인</a>
-          </li>
+        </li>
         <li>
           <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/user/logout}">로그아웃</a>
         </li>
