feat: 선후수 관계에 대한 안내문구 추가
result 창에서 선후수 관계에 대한 안내문구를 추가함

--- a/src/main/resources/templates/gonghak/statusForm.html
+++ b/src/main/resources/templates/gonghak/statusForm.html
@@ -7,7 +7,8 @@
       </div>
       <div class="title-bar-controls" style="margin-right: 10px">
         <button style="margin-right: 20px">
-          <img src="/static/images/questionmark.svg" style="height: 40px; width: 40px; padding:10px">
+          <img src="/static/images/questionmark.svg"
+               style="height: 40px; width: 40px; padding:10px">
         </button>
         <button>
           <img src="/static/images/x.svg" style="height: 40px; width: 40px; padding:10px">
@@ -46,7 +47,12 @@
             </tbody>
           </table>
         </div>
-
+        <div>
+          <h5>본 서비스는 선후수 관계를 고려하지 않습니다!</h5>
+          <h5>자세한 선후수 관계는<a href="https://abeek.sejong.ac.kr/index.do">
+            공식 사이트
+          </a>를 참조해주세요.</h5>
+        </div>
       </div>
 
       <hr/>
