--- a/src/main/resources/templates/user/withdrawal.html
+++ b/src/main/resources/templates/user/withdrawal.html
@@ -9,9 +9,11 @@
         <button style="margin-right: 20px">
           <img src="/static/images/questionmark.svg" style="height: 40px; width: 40px; padding:10px">
         </button>
-        <button>
-          <img src="/static/images/x.svg" style="height: 40px; width: 40px; padding:10px">
-        </button>
+        <a href="https://elastic-march-a0d.notion.site/gonghak98-8b1448883b524b7aa4af14f19f60e162" target="_blank">
+          <button>
+            <img src="/static/images/x.svg" style="height: 40px; width: 40px; padding:10px">
+          </button>
+        </a>
       </div>
     </div>
     <div class="window-body" style="text-align: center">
