refactor: sejongauth->gonghak98

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -4,7 +4,7 @@
   <div class="window" style="width: 100%;margin-top: 10%">
     <div class="title-bar">
       <div class="title-bar-text " style="font-size: 30px">
-        Welcome to Sejong Auth
+        Welcome to gonghak98
       </div>
       <div class="title-bar-controls" style="margin-right: 10px">
         <button style="margin-right: 20px">
@@ -30,7 +30,7 @@
           </div>
           <div class="col-7">
             <p style="font-size: 40px">
-              Sejong Auth에 로그인하려면 암호를 입력하십시오.
+              gonghak98에 로그인하려면 암호를 입력하십시오.
             </p>
           </div>
           <div class="col-2"
