--- a/src/main/resources/templates/excel/excelList.html
+++ b/src/main/resources/templates/excel/excelList.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html layout:decorate="~{layout/layout2}">
 <div layout:fragment="content" class="container my-3">
   <div class="window" style="width: 100%;margin-top: 10%; min-height: 40dvh">
@@ -10,9 +9,11 @@
         <button style="margin-right: 20px">
           <img src="/static/images/questionmark.svg" style="height: 40px; width: 40px; padding:10px">
         </button>
-        <button>
-          <img src="/static/images/x.svg" style="height: 40px; width: 40px; padding:10px">
-        </button>
+        <a href="https://elastic-march-a0d.notion.site/gonghak98-8b1448883b524b7aa4af14f19f60e162" target="_blank">
+          <button>
+            <img src="/static/images/x.svg" style="height: 40px; width: 40px; padding:10px">
+          </button>
+        </a>
       </div>
     </div>
     <div class="window-body" style="text-align: center">
